--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/digital_pro?createDatabase
+IfNotExit=true
+spring.datasource.usrename=root
+spring.datasource.password=Amypo
 
